5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1753_3097.log
== TEST (2019-05-16 19:27:06) 
-- CODE:
p = int(input("posicao"))
if p = 1:
	x = 25
elif p = 2:
	x = 18
elif p = 3:
	x = 14 - p
total = 0
	while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 2
    if p = 1:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:27) 
-- CODE:
p = int(input("posicao"))
if p ==1:
	x = 25
elif p = 2:
	x = 18
elif p = 3:
	x = 14 - p
total = 0
	while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 4
    elif p = 2:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:38) 
-- CODE:
p = int(input("posicao"))
if p ==1:
	x = 25
elif p ==2:
	x = 18
elif p ==3:
	x = 14 - p
total ==0
	while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 9
    while (p != 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:05) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 14 - p
total == 0
	while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 9
    while (p != 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:13) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 14 - p
total == 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total == 0
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:46) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
else:
	x = 14-p
total == 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    total == 0
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:03) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
else:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:32:51) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif p>3 and p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.267724
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:52) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif p>3 and p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:33:16) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif p>3 and p<=10:
	x = 14-p1
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.240063
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:23) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif p>3 and p<=10:
	x = 14-p1
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:33:33) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif p>3 and p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.152994
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:35) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif p>3 and p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:35:20) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.215881
-- ERROR:
  File "/home/codebench/codes/1753/3097/main.py", line 10
    elif 3<p<=10
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:20) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 10
    elif 3<p<=10
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:26) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 10
    elif 3<p<10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:27) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 10
    elif 3<p<10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:27) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 10
    elif 3<p<10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:27) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 10
    elif 3<p<10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:27) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<10
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 10
    elif 3<p<10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:37) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:55) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:20) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:37) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:12) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:37:17) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.241872
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:30) 
-- CODE:
p = floatt("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 1
    p = floatt("posicao"))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:37:32) 
-- CODE:
p = floatt("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.150644
-- ERROR:
  File "/home/codebench/codes/1753/3097/main.py", line 1
    p = floatt("posicao"))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:37:53) 
-- CODE:
p = float(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.213505
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:22) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:58) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:38:59) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.174155
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:28) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:38) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:42) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:46) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:57) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:41:00) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:41:15) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:41:24) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:43) 
-- CODE:
p = int(input("posicao"))
if p=1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- ERROR:
File "XXXX", line 2
    if p=1:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:43:05) 
-- CODE:
p = float(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:06) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		if p<0:
			x = 0
		total = total + x
print(total)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:45:46) 
-- CODE:
p = int(input("posicao"))
if p==1:
	x = 25
elif p==2:
	x = 18
elif p==3:
	x = 12
elif p<0:
	x = 0
elif 3<p<=10:
	x = 14-p
else:
	x = 0
total = 0
while (p != 0):
		p = int(input("posicao"))
		total = total + x
print(total)
-- EXECUTION TIME:
0.245783
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
250
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
275
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
